--- a/package.json
+++ b/package.json
@@ -11,11 +11,14 @@
   "license": "Apache-2.0",
   "private": false,
   "scripts": {
-    "test": "exit 0"
+    "test": "node test.js",
+    "coverage": "nyc --reporter=lcov yarn test"
   },
   "devDependencies": {
+    "codecov": "^3.0.0",
     "eslint": "^4.19.1",
-    "eslint-config-gplane": "^1.5.0"
+    "eslint-config-gplane": "^1.5.0",
+    "nyc": "^11.6.0"
   },
   "dependencies": {
     "ansi-styles": "^3.2.1",
