--- a/.travis.yml
+++ b/.travis.yml
@@ -5,6 +5,8 @@ cache:
   yarn: true
   directories: node_modules
 
-script: yarn coverage
+script:
+  - yarn lint
+  - yarn coverage
 
 after_success: yarn codecov
