--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,8 +3,7 @@
     "target": "es2015",
     "module": "commonjs",
     "outDir": "dist",
-    "declaration": true,
-    "strict": true
+    "declaration": true
   },
   "include": [
     "src"
