--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,7 +3,8 @@
     "target": "es2015",
     "module": "commonjs",
     "outDir": "dist",
-    "declaration": true
+    "declaration": true,
+    "strict": true
   },
   "include": [
     "src"
