--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "eslint-formatter-beauty",
   "description": "Beautiful ESLint formatter.",
-  "version": "1.2.1",
+  "version": "3.0.0-beta.0",
   "main": "dist/index.js",
   "typings": "dist/index.d.ts",
   "author": "Pig Fang <g-plane@hotmail.com>",
