--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "type": "git",
     "url": "https://github.com/g-plane/methane"
   },
-  "license": "Apache-2.0",
+  "license": "MIT",
   "private": false,
   "keywords": [
     "beauty",
