--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,8 +3,8 @@
     "target": "es2015",
     "module": "commonjs",
     "outDir": "dist",
-    "declaration": true,
-    "strict": true
+    "strict": true,
+    "noImplicitAny": false
   },
   "include": [
     "src"
