--- a/package.json
+++ b/package.json
@@ -3,11 +3,10 @@
   "description": "Beautiful ESLint formatter.",
   "version": "3.0.0-beta.7",
   "main": "dist/index.js",
-  "typings": "dist/index.d.ts",
   "author": "Pig Fang <g-plane@hotmail.com>",
   "repository": {
     "type": "git",
-    "url": "https://github.com/g-plane/methane"
+    "url": "https://github.com/g-plane/eslint-formatter-beauty"
   },
   "license": "MIT",
   "private": false,
@@ -18,9 +17,27 @@
     "eslint",
     "eslint-formatter"
   ],
+  "files": [
+    "dist"
+  ],
   "scripts": {
     "build": "tsc -p .",
-    "prepublishOnly": "yarn build"
+    "prepublishOnly": "yarn build",
+    "lint": "tslint -p .",
+    "test": "jest"
+  },
+  "jest": {
+    "setupTestFrameworkScriptFile": "jest-extended",
+    "transform": {
+      "^.+\\.tsx?$": "ts-jest"
+    },
+    "testRegex": "(/__tests__/.*|(\\.|/)(test|spec))\\.(jsx?|tsx?)$",
+    "moduleFileExtensions": [
+      "ts",
+      "js",
+      "json",
+      "node"
+    ]
   },
   "dependencies": {
     "@babel/highlight": "^7.0.0-beta.44",
@@ -28,5 +45,16 @@
     "chalk": "^2.3.2",
     "code-excerpt": "^2.1.1",
     "log-symbols": "^2.2.0"
+  },
+  "devDependencies": {
+    "@types/eslint": "^4.16.3",
+    "@types/jest": "^23.3.1",
+    "@types/node": "^10.9.4",
+    "jest": "^23.5.0",
+    "jest-extended": "^0.8.1",
+    "ts-jest": "^23.1.4",
+    "tslint": "^5.11.0",
+    "tslint-config-gplane": "^3.0.0",
+    "typescript": "^3.0.3"
   }
 }
